--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/DongHyeokJeong/chatting#readme",
   "dependencies": {
+    "ejs": "^2.5.5",
     "express": "^4.10.2",
     "socket.io": "^1.7.2"
   }
